--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,34 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pcMonitor</groupId>
+    <groupId>uberdust</groupId>
     <artifactId>pcMonitor</artifactId>
+    <packaging>jar</packaging>
+    <name>ÜberDust - PC Monitor</name>
+    <description>Application for collecting data from a computer Network</description>
+    <url>http://uberdust.cti.gr</url>
     <version>1.0</version>
+    <properties>
+        <jetty-version>8.0.4.v20111024</jetty-version>
+    </properties>
 
     <repositories>
+        <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/2/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>codehaus</id>
+            <name>Maven Codehaus repository</name>
+            <url>http://repository.codehaus.org/</url>
+        </repository>
+        <repository>
+            <id>java.net</id>
+            <name>java.net</name>
+            <url>http://download.java.net/maven/2/</url>
+        </repository>
         <repository>
             <id>repository.ru1</id>
             <url>http://ru1.cti.gr/maven</url>
@@ -23,7 +46,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.9</version>
+            <version>1.2.16</version>
         </dependency>
         <dependency>
             <groupId>uberdust</groupId>
@@ -45,6 +68,26 @@
             </resource>
         </resources>
         <plugins>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2-beta-5</version>
+                <configuration>
+                    <descriptors>
+                        <descriptor>assembly.xml</descriptor>
+                    </descriptors>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
