--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,7 +7,15 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 log4j.appender.stdout.Threshold=info
 
-log4j.logger.eu.uberdust=DEBUG,stdout
+# Listener logger - used to log messages of the listener app
+log4j.appender.FileAppender=org.apache.log4j.RollingFileAppender
+log4j.appender.FileAppender.File=logs/pcMonitor.log
+log4j.appender.FileAppender.MaxFileSize=1MB
+log4j.appender.FileAppender.MaxBackupIndex=2
+log4j.appender.FileAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.FileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
+
+log4j.logger.eu.uberdust=DEBUG,pcMonitor
 
 
 
