logging to file

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.stdout.Threshold=info
 
 # Listener logger - used to log messages of the listener app
 log4j.appender.FileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.FileAppender.File=logs/pcMonitor.log
+log4j.appender.FileAppender.File=/var/log/pcMonitor.log
 log4j.appender.FileAppender.MaxFileSize=1MB
 log4j.appender.FileAppender.MaxBackupIndex=2
 log4j.appender.FileAppender.layout=org.apache.log4j.PatternLayout
