logging to file

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -15,7 +15,7 @@ log4j.appender.FileAppender.MaxBackupIndex=2
 log4j.appender.FileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.FileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 
-log4j.logger.eu.uberdust=DEBUG,pcMonitor
+log4j.logger.eu.uberdust=DEBUG,FileAppender
 
 
 
